NEW favicon + meta données

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/media/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bienvenue sur le portfolio de Philippe GARCIA</title>
+  <meta name="description"
+    content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.philippe-garcia.fr" />
+  <meta property="og:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
+  <meta property="og:description"
+    content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
+  <meta property="og:image" content="/src/media/favicon.svg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://www.philippe-garcia.fr" />
+  <meta name="twitter:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
+  <meta name="twitter:description"
+    content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
+  <meta name="twitter:image" content="/src/media/favicon.svg" />
+
+  <!-- Autres meta tags importants -->
+  <meta name="author" content="Philippe GARCIA" />
+  <meta name="robots" content="index, follow" />
+  <meta name="keywords"
+    content="Philippe GARCIA, développeur web, portfolio, full-stack, développement web, projets web" />
+  <link rel="canonical" href="https://www.philippe-garcia.fr" />
 </head>
 
 <body>
