--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Bienvenue sur le portfolio de Philippe GARCIA</title>
   <meta name="description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
+  <link rel="prefetch" href="/src/media/philippe.webp" as="image" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
