--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
   <link rel="preload" href="/src/media/philippe.webp" as="image" />
+  <meta name="theme-color" content="#ffffff" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -16,7 +17,11 @@
   <meta property="og:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
   <meta property="og:description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
-  <meta property="og:image" content="/src/media/favicon.svg" />
+  <meta property="og:image" content="/src/media/icon-code.webp" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Photo d'icone du site de Philippe GARCIA, développeur web" />
+  <meta property="og:image" content="/src/media/icon-code.png" />
+  <meta property="og:image:type" content="image/png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -24,7 +29,9 @@
   <meta name="twitter:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
   <meta name="twitter:description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
-  <meta name="twitter:image" content="/src/media/favicon.svg" />
+  <meta name="twitter:image" content="/src/media/icon-code.webp" />
+  <meta name="twitter:image:alt" content="Photo d'icone du site de Philippe GARCIA, développeur web" />
+  <meta name="twitter:image" content="/src/media/icon-code.png" />
 
   <!-- Autres meta tags importants -->
   <meta name="author" content="Philippe GARCIA" />
