--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <meta property="og:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
   <meta property="og:description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
-  <meta property="og:image" content="/src/media/icon-code.webp" />
+  <meta property="og:image" content="/src/media/philippe.webp" />
   <meta property="og:image:type" content="image/webp" />
   <meta property="og:image:alt" content="Photo d'icone du site de Philippe GARCIA, développeur web" />
-  <meta property="og:image" content="/src/media/icon-code.png" />
+  <meta property="og:image" content="/src/media/philippe.png" />
   <meta property="og:image:type" content="image/png" />
 
   <!-- Twitter -->
@@ -29,9 +29,9 @@
   <meta name="twitter:title" content="Portfolio de Philippe GARCIA - Développeur Web" />
   <meta name="twitter:description"
     content="Portfolio de Philippe GARCIA, développeur web full-stack. Découvrez mes projets, compétences et réalisations en développement web." />
-  <meta name="twitter:image" content="/src/media/icon-code.webp" />
+  <meta name="twitter:image" content="/src/media/philippe.webp" />
   <meta name="twitter:image:alt" content="Photo d'icone du site de Philippe GARCIA, développeur web" />
-  <meta name="twitter:image" content="/src/media/icon-code.png" />
+  <meta name="twitter:image" content="/src/media/philippe.png" />
 
   <!-- Autres meta tags importants -->
   <meta name="author" content="Philippe GARCIA" />
